Fixing overlapping bullets on images in post content.

--- a/wordpress/wp-content/themes/Eris/assets/sass/_presentation.scss
+++ b/wordpress/wp-content/themes/Eris/assets/sass/_presentation.scss
@@ -450,12 +450,19 @@ form {}
   .content-body {
     padding:em-adjust(.625em);
     img.alignleft {
+      clear: left;
       float: left;
       margin: 0 .5em .5em 0;
     }
     img.alignright {
+      clear: right;
       float: right;
       margin: 0 0 .5em .5em;
+    }
+  }
+  .bullets li {
+      position: relative;
+      left: 1.5em;
     }
   }
 }
@@ -463,7 +470,7 @@ form {}
 .post, .question {
   padding:inherit 0px;
   .content-body p {
-    margin-bottom: em-adjust( 1.2em )
+    margin-bottom: em-adjust( 1.2em );
   }
 }
 
